nc-to-k8s/geoip-nc.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: geoip2
  namespace: kube-system
spec:
  plugin:
    geoip:
      dbPath: "/var/lib/geoip2/GeoLite2-City.mmdb"
