nc-to-k8s/middleware.yml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: resprewrite
spec:
  headers:
    customResponseHeaders:
      X-Custom-Response-Header: "https://cloud.schramm-mainz.de"
