nc-to-k8s/owncloud-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: owncloud
  name: owncloud
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: owncloud
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/owncloud-network: "true"
        io.kompose.service: owncloud
    spec:
      containers:
        - image: steven1991/owncloud:27.1.3
          name: owncloud
          ports:
           # - containerPort: 443
            - containerPort: 80
          resources: {}
          volumeMounts:
            - mountPath: /var/www/html/custom_apps
              name: owncloud-claim0
            - mountPath: /var/www/html/apps
              name: owncloud-claim1
            - mountPath: /var/www/html/config
              name: owncloud-claim2
            - mountPath: /Data
              name: owncloud-claim3
            - mountPath: /etc/apache2/ssl
              name: owncloud-claim4
      restartPolicy: Always
      volumes:
        - name: owncloud-claim0
          persistentVolumeClaim:
            claimName: owncloud-claim0-pvc
        - name: owncloud-claim1
          persistentVolumeClaim:
            claimName: owncloud-claim1-pvc
        - name: owncloud-claim2
          persistentVolumeClaim:
            claimName: owncloud-claim2-pvc
        - name: owncloud-claim3
          persistentVolumeClaim:
            claimName: owncloud-claim3-pvc
        - name: owncloud-claim4
          persistentVolumeClaim:
            claimName: owncloud-claim4-pvc
status: {}
