nc-to-k8s/ingress-nc.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    kubernetes.io/ingress.class: traefik
    #cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/whitelist-source-range: 0.0.0.0/0
    kubernetes.io/ingress.allow-http: "false"
    cert-manager.io/issuer: "cert-issuer-nc"
    cert-manager.io/privatekey-size: "4096"
    #traefik.ingress.kubernetes.io/protocol: https
    traefik.ingress.kubernetes.io/service.serversscheme: https
    #traefik.ingress.kubernetes.io/router.tls: "true"
    #ingress.kubernetes.io/router.tls: "true"
    #ingress.kubernetes.io/protocol: https
    #traefik.ingress.kubernetes.io/router.entrypoints: websecure
    #traefik.ingress.kubernetes.io/router.middlewares: nextcloud-resprewrite@kubernetescrd
    traefik.ingress.kubernetes.io/router.tls.options: nextcloud-tlsparam@kubernetescrd
    traefik.ingress.kubernetes.io/service.serverstransport: nextcloud-mytransport@kubernetescrd
    #traefik.ingress.kubernetes.io/router.insecureSkipVerify: "true"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - cloud.schramm-mainz.de
    secretName: certmanager-cloud.schramm-mainz.de
  rules:
    - host: cloud.schramm-mainz.de
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: owncloud
              port:
                number: 80
