nc-to-k8s/owncloud-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: owncloud-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/owncloud-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/owncloud-network: "true"
